# sensor-comparison-firmware

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  clangCompileScript.sh  partitions.csv  sdkconfig.defaults
.devcontainer/: Dockerfile  devcontainer.env  devcontainer.json
components/BME6xxManager/: BME6xxCfgSerializer.cpp  BME6xxManager.cpp  BME6xxScheduler.cpp  CMakeLists.txt  Kconfig.projbuild  commMux.cpp  idf_component.yml
components/BME6xxManager/include/: BME6xxCfgSerializer.h  BME6xxConfigurator.h  BME6xxManager.h  BME6xxManagerErrors.h  BME6xxManagerTypes.h  BME6xxScheduler.h
components/BME6xxManager/src/: BME6xxCfgSerializer.cpp  BME6xxConfigurator.cpp  BME6xxManager.cpp  BME6xxScheduler.cpp
components/BME6xxSensor/: CMakeLists.txt  idf_component.yml
components/CommMux/: CMakeLists.txt
components/MeasurementModule/: CMakeLists.txt  MeasurementModule.cpp  MeasurementTask.cpp
components/MeasurementModule/include/: Datatypes.h  MeasurementDatatypes.h  MeasurementModule.h  MeasurementModuleDatatypes.h  MeasurementModuleErrors.h  MeasurementTask.h
main/: AppDatatypes.hpp  CMakeLists.txt  Config.h  SlidingWindow.cpp  SlidingWindow.h  SlidingWindow.hpp  StateManagement.cpp  StateManagement.h  Utilities.cpp  Utilities.h  app_errors.h  idf_component.yml  main.cpp  mqtt_config.h  peripheral_config.h  sntp_config.h  wifi_config.h
main/AppModules/: AlertModule.cpp  AlertModule.h  CalibrationModule.h  ClockSyncModule.cpp  ClockSyncModule.h  FilterModule.h  RTCSyncModule.cpp  RTCSyncModule.h  StateManagementModule.cpp  StateManagementModule.h
main/littlefs/: x8default_1sens.bmeconfig
main/modules/bme_sample_module/: bme_sample_module.cpp  bme_sample_module.h  config.h
main/modules/mqtt_transmission_module/: config.h  mqtt_transmission_module.c  mqtt_transmission_module.h
main/modules/tgs_sample_module/: config.h  tgs_sample_module.cpp  tgs_sample_module.h
scripts/: flashTargetLargeApp.sh
(+57 files in other folders)
